Refactor headings in filters and search section on homepage
- Changed heading levels from h1 to h2 and h2 to h3 for better semantic structure.
- Updated CSS selectors to reflect the changes in heading levels for consistent styling.
- Improved layout by wrapping the search section in a new div for better organization.

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -47,9 +47,9 @@
     </nav>
     <div class="cont">
       <aside>
-        <h1 class="ti">Filters</h1>
+        <h2 class="ti">Filters</h2>
         <div class="filter-cat">
-          <h2>Categories</h2>
+          <h3>Categories</h3>
           <select name="All Categories" id="">
             <option value="All Categories">All Categories</option>
             <option value="Electroncs">Electroncs</option>
@@ -59,7 +59,7 @@
           </select>
         </div>
         <div class="price">
-          <h2>Price Range</h2>
+          <h3>Price Range</h3>
           <div class="num">
             <input type="number" placeholder="Min" />
             <input type="number" placeholder="Max" />
@@ -67,9 +67,11 @@
         </div>
         <button class="submit-btn">Apply Filters</button>
       </aside>
-      <div class="ser">
-        <h1>Search Products</h1>
+      <div class="content">
+        <div class="ser">
+        <h2>Search Products</h2>
         <input type="search" placeholder="Search for items..." />
+      </div>
       </div>
     </div>
 
