Refactor filter section and update styles on homepage
- Renamed HTML classes for better clarity and consistency, changing 'cont' to 'content-container' and 'filter-cat' to 'filter-categores'.
- Updated CSS selectors to match new class names and improved styling for filter elements, including transitions for input focus states.
- Enhanced layout and responsiveness of the filter section for a better user experience.

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -45,12 +45,12 @@
         </div>
       </div>
     </nav>
-    <div class="cont">
+    <div class="content-container">
       <aside>
-        <h2 class="ti">Filters</h2>
-        <div class="filter-cat">
+        <h2 class="filter-title">Filters</h2>
+        <div class="filter-categores">
           <h3>Categories</h3>
-          <select name="All Categories" id="">
+          <select name="" id="">
             <option value="All Categories">All Categories</option>
             <option value="Electroncs">Electroncs</option>
             <option value="Clothing">Clothing</option>
