Enhance button styles and add script to login page
- Added hover effects and transitions to submit buttons for improved interactivity.
- Updated CSS for product information section to include cursor and transition effects.
- Included a new script reference in the login page for additional functionality.

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -98,6 +98,7 @@
         </footer>
     
     <script src="../js/toggle-theme.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
