--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -54,19 +54,19 @@
         </div>
         <div class="form-group">
           <label for="email-input">Email</label>
-          <input type="email" id="email-input" class="text-input" />
+          <input type="email" id="email-input" class="text-input" required/>
         </div>
         <div class="form-group">
           <label for="password">Passowrd</label>
           <input
             type="password"
-            id="passowrd"
+            id="password"
             class="text-input"
             minlength="8"
             required
           />
           <p class="password-hint">
-            Password must be at least 8 characters with letters and numbers
+            Password must be at least 8 characters
           </p>
         </div>
         <div class="form-group">
@@ -86,12 +86,13 @@
             <a href="">Privacy Policy</a></label
           >
         </div>
-        <input type="submit" class="submit-btn" value="Create Account" />
+        <button type="submit" class="submit-btn">Create Account</button>
         <div class="auth-footer">
           <p>Already have an account? <a href="../login">Log in here</a></p>
         </div>
       </form>
     </div>
+    <script src="script.js"></script>
     <script src="../js/toggle-theme.js"></script>
   </body>
 </html>
