Change the structure of the project and fix the nav bar.

--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -44,6 +44,15 @@
                             📃Register
                         </a>
                     </li>
+                    <li id="nav-username" style="display: none;">
+                        <a href="#">
+                        </a>
+                    </li>
+                    <li id="nav-logout" style="display: none;">
+                        <a href="#">
+                            🚪Logout
+                        </a>
+                    </li>
                 </ul>
                 <button class="toggle-theme">🔆</button>
                     <label for="bars" class="bars-icon">
