Update product images on homepage
- Replaced outdated product images with new ones for better representation.
- Removed the old image file for the BMW M4 CSL and updated references in the HTML file.

--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -94,7 +94,7 @@
       <div class="proudcts">
             <div class="one-proudct">
               <div class="proimg">
-              <img src="../imges/2023-bmw-m4-csl-drive-106-1664158849.webp" alt="">
+              <img src="../imges/post_05070_158352.webp" alt="">
             </div>
             <div class="proinfo">
               <h3>Designer Sunglasses</h3>
@@ -145,7 +145,7 @@
             </div>
             <div class="one-proudct">
               <div class="proimg">
-              <img src="../imges/black_and_1534817744-1024x475.webp" alt="" width="300px">
+              <img src="../imges/M4-33.webp" alt="" width="300px">
             </div>
             <div class="proinfo">
               <h3>Designer Sunglasses</h3>
@@ -196,7 +196,7 @@
             </div>
             <div class="one-proudct">
               <div class="proimg">
-              <img src="../imges/bmw-i8.webp" alt="" width="300px">
+              <img src="../imges/bmw-m4.webp" alt="" width="300px">
             </div>
             <div class="proinfo">
               <h3>Designer Sunglasses</h3>
@@ -213,7 +213,7 @@
             </div>
             <div class="one-proudct">
               <div class="proimg">
-              <img src="../imges/2025-bmw-m440i-xdrive-105-662804b588ccf.webp" alt="" width="300px">
+              <img src="../imges/2025-bmw-m4-coupe-front-three-quarters-motion-65b935ea5dde6.webp" alt="" width="300px">
             </div>
             <div class="proinfo">
               <h3>Designer Sunglasses</h3>
