--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -74,6 +74,7 @@
           <option value="Clothing">Clothing</option>
           <option value="Books">Books</option>
           <option value="Furniture">Furniture</option>
+          <option value="BMW">BMW</option>
         </select>
       </div>
       <div class="price">
