Add footer section to index.html with contact, support, and legal information
- Introduced a new footer containing sections for About Us, Support, and Legal information.
- Included copyright notice for 2025 Used Market.

--- a/backend/public/proudct/index.html
+++ b/backend/public/proudct/index.html
@@ -142,8 +142,32 @@
             </div>
           </div>
     </div>
+
  </div>
 
+  <footer>
+    <div class="contact">
+      <div class="About">
+        <h3>About Us</h2>
+          <p>About used Market</p>
+          <p>How it Works</p>
+      </div>
+      <div class="Support">
+        <h3>Support</h2>
+          <p>Contact Us</p>
+          <p>FAQ</p>
+      </div>
+      <div class="legal">
+        <h3>Legal</h2>
+          <p>Terms of Service</p>
+          <p>Privacy Policy</p>
+      </div>
+    </div>
+    <hr>
+    <div class="copyright">
+      <p>&copy; 2025 Used Market. All rights reserved.</p>
+    </div>
+  </footer>
 
 
 
