--- a/backend/public/proudct/index.html
+++ b/backend/public/proudct/index.html
@@ -174,5 +174,7 @@
 
 <script src="../js/toggle-theme.js"></script>
 <script src="../js/nav.js"></script>
+<script src="script.js"></script>
+
   </body>
 </html>
