--- a/backend/public/sell item/index.html
+++ b/backend/public/sell item/index.html
@@ -64,6 +64,10 @@
             Upload up to 4 images of your product. First image will be the main
             display image.
           </p>
+          <div class="addimg">
+          <label for="file">Upload Images</label>
+          <input type="file" id="file">
+        </div>
         </div>
         <div class="product-information">
           <h2>📝 Product Information</h2>
@@ -78,11 +82,8 @@
           </div>
           <div class="product-discription" id="same">
             <label for="">Product Description</label>
-            <input
-              type="text"
-              placeholder="Enter a descriptive title for your product"
-              class="input-proudct"
-            />
+            <textarea name="" id="" class="input-proudct">
+            </textarea>
           </div>
           <div class="product-Category" id="same">
             <label for="">Product Category</label>
