imges in sell item

--- a/backend/public/sell item/index.html
+++ b/backend/public/sell item/index.html
@@ -65,9 +65,15 @@
             display image.
           </p>
           <div class="addimg">
-          <label for="file">Upload Images</label>
-          <input type="file" id="file">
-        </div>
+            <label for="file">Upload Image</label>
+            <input type="file" id="file" />
+            <label for="file1">Upload Image</label>
+            <input type="file" id="file1" />
+            <label for="file2">Upload Image</label>
+            <input type="file" id="file2" />
+            <label for="file3">Upload Image</label>
+            <input type="file" id="file3" />
+          </div>
         </div>
         <div class="product-information">
           <h2>📝 Product Information</h2>
@@ -81,8 +87,13 @@
             />
           </div>
           <div class="product-discription" id="same">
-            <label for="">Product Description</label>
-            <textarea name="" id="" class="input-proudct">
+            <label for="textarea">Product Description</label>
+            <textarea
+              name=""
+              id="textarea"
+              class="input-proudct"
+              placeholder="Describe your product in detail - condition,features,reason"
+            >
             </textarea>
           </div>
           <div class="product-Category" id="same">
