--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li>
-            <a>
+            <a href="../sell item">
               📦Sell Item
             </a>
           </li>
