--- a/backend/public/sell item/index.html
+++ b/backend/public/sell item/index.html
@@ -93,8 +93,7 @@
               id="textarea"
               class="input-proudct"
               placeholder="Describe your product in detail - condition,features,reason"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="product-Category" id="same">
             <label for="">Product Category</label>
@@ -125,6 +124,7 @@
               type="text"
               placeholder="Enter Your Price"
               class="input-proudct"
+              value="$ "
             />
           </div>
         </div>
