Refactor product page to use EJS templating, implement product retrieval from Supabase, and enhance navigation functionality
- Replaced static HTML product page with EJS template for dynamic rendering.
- Integrated Supabase to fetch product details, including user and category information.
- Updated navigation JavaScript to manage user session state and display appropriate buttons.
- Added Content Security Policy middleware for enhanced security.
- Removed unused static HTML file and associated assets.
- Improved styling and structure of product details page.

--- a/backend/public/product/old.html
+++ b/backend/public/product/old.html
@@ -114,7 +114,7 @@
       <div class="description">
         <h2>Description</h2>
         <hr>
-        <p>A well‑preserved leather jacket from the 1980s. Minor scuffs but overall great condition.</p>
+        <p>A well-preserved leather jacket from the 1980s. Minor scuffs but overall great condition.</p>
       </div>
       <div class="details">
         <h2>Details</h2>
