Add footer section to sell item page and adjust body layout in CSS

--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -53,7 +53,7 @@
     </nav>
     <div class="container">
       <form action="">
-        <
+        
         <h1 class="title">sell Your Product</h1>
         <p class="container-p">
           Fill out the form below to list your item for sale on Pay&pray.
@@ -139,6 +139,29 @@
         <button class="submit-btn">List Your Product</button>
       </form>
     </div>
+  <footer>
+    <div class="contact">
+      <div class="About">
+        <h3>About Us</h2>
+          <p>About used Market</p>
+          <p>How it Works</p>
+      </div>
+      <div class="Support">
+        <h3>Support</h2>
+          <p>Contact Us</p>
+          <p>FAQ</p>
+      </div>
+      <div class="legal">
+        <h3>Legal</h2>
+          <p>Terms of Service</p>
+          <p>Privacy Policy</p>
+      </div>
+    </div>
+    <hr>
+    <div class="copyright">
+      <p>&copy; 2025 Used Market. All rights reserved.</p>
+    </div>
+  </footer>
 
     <script src="../js/nav.js"></script>
     <script src="../js/toggle-theme.js"></script>
