--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +20,7 @@
 <body>
   <nav>
     <div class="nav-con">
-      <div class="logo">Pay&Pray</div>
+      <div class="logo"><a href="../home">Pay&Pray</a></div>
       <div class="right-side">
         <input type="checkbox" id="bars" class="nav-checkbox">
         <ul>
@@ -36,6 +35,7 @@
             </a>
           </li>
           <li id="nav-login">
+
             <a href="../login">
               🔑Login
             </a>
@@ -110,7 +110,6 @@
           </div>
           <button class="submit-btn">Buy Now</button>
         </div>
-
       </div>
     </div>
   </div>
