fix: update links to 'sell-item' across multiple files and enhance image upload functionality

--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a href="../sell item">
+            <a href="../sell-item">
               📦Sell Item
             </a>
           </li>
