--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -30,7 +30,7 @@
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="../sell-item">
                             📦Sell Item
                         </a>
                     </li>
