--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -29,7 +29,7 @@
               <a href="../home"> 🏠Home </a>
             </li>
             <li>
-              <a href="../sell item"> 📦Sell Item </a>
+              <a href="../sell-item"> 📦Sell Item </a>
             </li>
             <li id="nav-login">
               <a href="../login"> 🔑Login </a>
@@ -65,13 +65,13 @@
           </p>
           <div class="addimg">
             <label for="file">Upload Image</label>
-            <input type="file" id="file" />
+            <input type="file" class="image-input" accept="image/*" id="file" />
             <label for="file1">Upload Image</label>
-            <input type="file" id="file1" />
+            <input type="file" class="image-input" accept="image/*" id="file1" />
             <label for="file2">Upload Image</label>
-            <input type="file" id="file2" />
+            <input type="file" class="image-input" accept="image/*" id="file2" />
             <label for="file3">Upload Image</label>
-            <input type="file" id="file3" />
+            <input type="file" class="image-input" accept="image/*" id="file3" />
           </div>
         </div>
         <div class="product-information">
@@ -175,6 +175,7 @@
   </footer>
 
     <script src="../js/nav.js"></script>
+    <script src="script.js"></script>
     <script src="../js/toggle-theme.js"></script>
   </body>
 </html>
