fix: update product links and adjust z-index for sidebar

--- a/backend/public/product/old.html
+++ b/backend/public/product/old.html
@@ -20,7 +20,7 @@
 <body>
   <nav>
     <div class="nav-con">
-      <div class="logo">Pay&Pray</div>
+      <div class="logo"><a href="../home">Pay&Pray</a></div>
       <div class="right-side">
         <input type="checkbox" id="bars" class="nav-checkbox" />
         <ul>
