feat: add API endpoint for fetching product categories and update category selection in the frontend

--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -96,16 +96,16 @@
           </div>
           <div class="product-Category" id="same">
             <label for="">Product Category</label>
-            <select class="input-proudct">
+            <select class="input-proudct" id="select-category">
               <option value="" disabled selected>Select product category</option>
-              <option value="Electronics">Electronics</option>
+              <!-- <option value="Electronics">Electronics</option>
               <option value="Cars">Cars</option>
               <option value="Clothes">Clothes</option>
               <option value="Tools">Tools</option>
               <option value="Books">Books</option>
               <option value="Sports">Sports</option>
               <option value="Art">Art</option>
-              <option value="other">other</option>
+              <option value="other">other</option> -->
             </select>
           </div>
           <div class="product-condition" id="same">
