fix: update product fetching order and enhance category selection in frontend

--- a/backend/public/home/index.html
+++ b/backend/public/home/index.html
@@ -68,13 +68,13 @@
       <form action="">
         <div class="filter-categores">
           <h3>Categories</h3>
-          <select name="" id="">
+          <select name="" id="select-category">
             <option value="All Categories">All Categories</option>
-            <option value="Electroncs">Electroncs</option>
+            <!-- <option value="Electroncs">Electroncs</option>
             <option value="Clothing">Clothing</option>
             <option value="Books">Books</option>
             <option value="Furniture">Furniture</option>
-            <option value="BMW">BMW</option>
+            <option value="BMW">BMW</option> -->
           </select>
         </div>
         <div class="price">
