feat: add AI help button to product description form and style it

--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -92,7 +92,9 @@
               id="textarea"
               class="input-proudct"
               placeholder="Describe your product in detail - condition,features,reason"
+            
             ></textarea>
+              <button class="ai-btn">✨Ai Help</button>
           </div>
           <div class="product-Category" id="same">
             <label for="">Product Category</label>
