--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -1,106 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/nav.css" />
-    <link rel="stylesheet" href="../css/form-styles.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../css/basics.css" />
-    <link rel="stylesheet" href="../css/normlize.css" />
-    <link rel="stylesheet" href="../css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <nav>
-      <div class="nav-con">
-        <div class="logo"><a href="../home">Pay&Pray</a></div>
-        <div class="right-side">
-          <input type="checkbox" id="bars" class="nav-checkbox" />
-          <ul>
-            <li>
-              <a href="../home"> 🏠Home </a>
-            </li>
-            <li>
-              <a href="../sell-item"> 📦Sell Item </a>
-            </li>
-            <li id="nav-login">
-              <a href="../login"> 🔑Login </a>
-            </li>
-            <li id="nav-register">
-              <a href="../register"> 📃Register </a>
-            </li>
-            <li id="nav-username" style="display: none">
-              <a href="#"> </a>
-            </li>
-            <li id="nav-logout" style="display: none">
-              <a href="#"> 🚪Logout </a>
-            </li>
-          </ul>
-          <button class="toggle-theme">🔆</button>
-          <label for="bars" class="bars-icon">
-            <i class="fa-solid fa-bars bars"></i>
-          </label>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/nav.css" />
+  <link rel="stylesheet" href="../css/form-styles.css" />
+  <link rel="stylesheet" href="../css/footer.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/basics.css" />
+  <link rel="stylesheet" href="../css/normlize.css" />
+  <link rel="stylesheet" href="../css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <nav>
+    <div class="nav-con">
+      <div class="logo"><a href="../home">Pay&Pray</a></div>
+      <div class="right-side">
+        <input type="checkbox" id="bars" class="nav-checkbox" />
+        <ul>
+          <li>
+            <a href="../home"> 🏠Home </a>
+          </li>
+          <li>
+            <a href="../sell-item"> 📦Sell Item </a>
+          </li>
+          <li id="nav-login">
+            <a href="../login"> 🔑Login </a>
+          </li>
+          <li id="nav-register">
+            <a href="../register"> 📃Register </a>
+          </li>
+          <li id="nav-username" style="display: none">
+            <a href="#"> </a>
+          </li>
+          <li id="nav-logout" style="display: none">
+            <a href="#"> 🚪Logout </a>
+          </li>
+        </ul>
+        <button class="toggle-theme">🔆</button>
+        <label for="bars" class="bars-icon">
+          <i class="fa-solid fa-bars bars"></i>
+        </label>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <form action="">
+      <h1 class="title">sell Your Product</h1>
+      <p class="container-p">
+        Fill out the form below to list your item for sale on Pay&pray.
+      </p>
+      <div class="imgs">
+        <h3>📸 Product Images</h3>
+        <p>
+          Upload up to 4 images of your product. First image will be the main
+          display image.
+        </p>
+        <div class="addimg">
+          <label for="file">Upload Image</label>
+          <input type="file" class="image-input" accept="image/*" id="file" />
+          <label for="file1">Upload Image</label>
+          <input type="file" class="image-input" accept="image/*" id="file1" />
+          <label for="file2">Upload Image</label>
+          <input type="file" class="image-input" accept="image/*" id="file2" />
+          <label for="file3">Upload Image</label>
+          <input type="file" class="image-input" accept="image/*" id="file3" />
         </div>
       </div>
-    </nav>
-    <div class="container">
-      <form action="">
-        <h1 class="title">sell Your Product</h1>
-        <p class="container-p">
-          Fill out the form below to list your item for sale on Pay&pray.
-        </p>
-        <div class="imgs">
-          <h3>📸 Product Images</h3>
-          <p>
-            Upload up to 4 images of your product. First image will be the main
-            display image.
-          </p>
-          <div class="addimg">
-            <label for="file">Upload Image</label>
-            <input type="file" class="image-input" accept="image/*" id="file" />
-            <label for="file1">Upload Image</label>
-            <input type="file" class="image-input" accept="image/*" id="file1" />
-            <label for="file2">Upload Image</label>
-            <input type="file" class="image-input" accept="image/*" id="file2" />
-            <label for="file3">Upload Image</label>
-            <input type="file" class="image-input" accept="image/*" id="file3" />
-          </div>
-        </div>
-        <div class="product-information">
-          <h2>📝 Product Information</h2>
+      <div class="product-information">
+        <h2>📝 Product Information</h2>
 
-          <div class="product-title" id="same">
-            <label for="">Product Title</label>
-            <input
-              type="text"
-              placeholder="Enter a descriptive title for your product"
-              class="input-proudct"
-            />
-          </div>
-          <div class="product-discription" id="same">
-            <label for="textarea">Product Description</label>
-            <textarea
-              name=""
-              id="textarea"
-              class="input-proudct"
-              placeholder="Describe your product in detail - condition,features,reason"
-            
-            ></textarea>
-              <button class="ai-btn">✨Ai Help</button>
-          </div>
-          <div class="product-Category" id="same">
-            <label for="">Product Category</label>
-            <select class="input-proudct" id="select-category">
-              <option value="" disabled selected>Select product category</option>
-              <!-- <option value="Electronics">Electronics</option>
+        <div class="product-title" id="same">
+          <label for="">Product Title</label>
+          <input type="text" placeholder="Enter a descriptive title for your product" class="input-proudct" />
+        </div>
+        <div class="product-discription" id="same">
+          <label for="textarea">Product Description</label>
+        </div>
+        <div class="ai">
+          <textarea name="" id="textarea" class="input-proudct"
+            placeholder="Describe your product in detail - condition,features,reason"></textarea>
+          <button class="ai-btn">✨Ai Help</button>
+        </div>
+        <div class="product-Category" id="same">
+          <label for="">Product Category</label>
+          <select class="input-proudct" id="select-category">
+            <option value="" disabled selected>Select product category</option>
+            <!-- <option value="Electronics">Electronics</option>
               <option value="Cars">Cars</option>
               <option value="Clothes">Clothes</option>
               <option value="Tools">Tools</option>
@@ -108,52 +100,39 @@
               <option value="Sports">Sports</option>
               <option value="Art">Art</option>
               <option value="other">other</option> -->
-            </select>
-          </div>
-          <div class="product-condition" id="same">
-            <label for="">Product Condition</label>
-            <select class="input-proudct">
-              <option value="" disabled selected>Select product condition</option>
-              <option value="">New</option>
-              <option value="">Used-like New</option>
-              <option value="">Used-Good</option>
-              <option value="">Used - Acceptable</option>
-              <option value="">For Parts or Not Working</option>
-            </select>
-          </div>
-          <div class="product-price" id="same">
-            <label for="">Price</label>
-            <input
-              type="number"
-              placeholder="Enter Your Price"
-              class="input-proudct"
-              step="0.01"
-            />
-          </div>
+          </select>
         </div>
-        <div class="Seller-Contact-Information">
-          <h3>📍Seller Contact Information</h3>
+        <div class="product-condition" id="same">
+          <label for="">Product Condition</label>
+          <select class="input-proudct">
+            <option value="" disabled selected>Select product condition</option>
+            <option value="">New</option>
+            <option value="">Used-like New</option>
+            <option value="">Used-Good</option>
+            <option value="">Used - Acceptable</option>
+            <option value="">For Parts or Not Working</option>
+          </select>
+        </div>
+        <div class="product-price" id="same">
+          <label for="">Price</label>
+          <input type="number" placeholder="Enter Your Price" class="input-proudct" step="0.01" />
+        </div>
+      </div>
+      <div class="Seller-Contact-Information">
+        <h3>📍Seller Contact Information</h3>
 
-          <div class="address" id="same">
-            <label for="">Address</label>
-            <input
-              type="text"
-              placeholder="Enter your address or genral location"
-              class="input-proudct"
-            />
-          </div>
-          <div class="phone-num" id="same">
-            <label for="">Phone Number</label>
-            <input
-              type="text"
-              placeholder="Enter your address or genral location"
-              class="input-proudct"
-            />
-          </div>
+        <div class="address" id="same">
+          <label for="">Address</label>
+          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" />
         </div>
-        <button class="submit-btn">List Your Product</button>
-      </form>
-    </div>
+        <div class="phone-num" id="same">
+          <label for="">Phone Number</label>
+          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" />
+        </div>
+      </div>
+      <button class="submit-btn">List Your Product</button>
+    </form>
+  </div>
   <footer>
     <div class="contact">
       <div class="About">
@@ -178,8 +157,9 @@
     </div>
   </footer>
 
-    <script src="../js/nav.js"></script>
-    <script src="script.js"></script>
-    <script src="../js/toggle-theme.js"></script>
-  </body>
+  <script src="../js/nav.js"></script>
+  <script src="script.js"></script>
+  <script src="../js/toggle-theme.js"></script>
+</body>
+
 </html>
