feat: implement backend structure with Express, Supabase integration, and routing fix: update Supabase client initialization to use correct environment variables fix: adjust HTML and JavaScript file paths for consistency fix: remove alert for error messages in sell-item script

--- a/backend/public/product/old.html
+++ b/backend/public/product/old.html
@@ -105,10 +105,10 @@
           <img src="../imges/bmw-i8.webp" alt="" id="main-img">
         </div>
         <div class="some">
-          <img src="../imges/2025-bmw-m4-coupe-front-three-quarters-motion-65b935ea5dde6.webp" alt="" id="sup-img">
-          <img src="../imges/2025-bmw-3-series-117-66562dd23a1b8.webp" alt="" id="sup-img">
-          <img src="../imges/M4-33.webp" alt="" id="sup-img">
-          <img src="../imges/bmw-m4.webp" alt="" id="sup-img">
+          <img src="../imges/2025-bmw-m4-coupe-front-three-quarters-motion-65b935ea5dde6.webp" alt="">
+          <img src="../imges/2025-bmw-3-series-117-66562dd23a1b8.webp" alt="">
+          <img src="../imges/M4-33.webp" alt="" >
+          <img src="../imges/bmw-m4.webp" alt="" >
         </div>
       </div>
       <div class="description">
