--- a/backend/public/login/index.html
+++ b/backend/public/login/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/form-styles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/basics.css">
     <link rel="stylesheet" href="../css/normlize.css">
@@ -107,7 +107,7 @@
         </footer>
     
     <script src="../js/toggle-theme.js"></script>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <script src="../js/nav.js"></script>
 </body>
 
