--- a/backend/public/register/index.html
+++ b/backend/public/register/index.html
@@ -90,7 +90,7 @@
             <a href="">Privacy Policy</a></label
           >
         </div>
-        <button type="submit" class="submit-btn">Create Account</button>
+        <button type="submit" class="submit-btn" id="register-btn">Create Account</button>
         <div class="auth-footer">
           <p>Already have an account? <a href="../login">Log in here</a></p>
         </div>
