--- a/backend/public/register/index.html
+++ b/backend/public/register/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/nav.css" />
+<link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/form-styles.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../css/basics.css" />
@@ -96,6 +97,29 @@
         </div>
       </form>
     </div>
+   <footer>
+    <div class="contact">
+        <div class="About">
+         <h3>About Us</h2>
+         <p>About used Market</p>
+         <p>How it Works</p>
+        </div>
+        <div class="Support">
+         <h3>Support</h2>
+         <p>Contact Us</p>
+         <p>FAQ</p>
+        </div>
+        <div class="legal">
+         <h3>Legal</h2>
+         <p>Terms of Service</p>
+         <p>Privacy Policy</p>
+        </div>
+      </div>
+        <hr>
+           <div class="copyright">
+            <p>&copy; 2025 Used Market. All rights reserved.</p>
+           </div>
+        </footer> 
     <script src="script.js"></script>
     <script src="../js/toggle-theme.js"></script>
     <script src="../js/nav.js"></script>
