fix: add required attributes to input fields for price, address, and phone number in sell item form

--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="product-price" id="same">
           <label for="">Price</label>
-          <input type="number" placeholder="Enter Your Price" class="input-proudct" step="0.01" id="price-input" />
+          <input type="number" placeholder="Enter Your Price" class="input-proudct" step="0.01" id="price-input" required />
         </div>
       </div>
       <div class="Seller-Contact-Information">
@@ -123,11 +123,11 @@
 
         <div class="address" id="same">
           <label for="">Address</label>
-          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" id="address-input" />
+          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" id="address-input" required />
         </div>
         <div class="phone-num" id="same">
           <label for="">Phone Number</label>
-          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" pattern="[+[0-9]]*" id="phone-input" />
+          <input type="text" placeholder="Enter your address or genral location" class="input-proudct" pattern="[+[0-9]]*" id="phone-input" required />
         </div>
       </div>
       <button class="submit-btn" id="list-product-btn">List Your Product</button>
