fix: update page titles for consistency across home, login, product, register, and sell-item pages

--- a/backend/public/register/index.html
+++ b/backend/public/register/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Pay&Pray/Register</title>
   </head>
   <body>
     <nav>
