--- a/backend/public/sell-item/index.html
+++ b/backend/public/sell-item/index.html
@@ -64,13 +64,13 @@
         </p>
         <div class="addimg">
           <label for="file">Upload Image</label>
-          <input type="file" class="image-input" accept="image/*" id="file" />
+          <input type="file" class="image-input" accept="image/jpeg, image/png, image/jpg, image/webp" id="file" />
           <label for="file1">Upload Image</label>
-          <input type="file" class="image-input" accept="image/*" id="file1" />
+          <input type="file" class="image-input" accept="image/jpeg, image/png, image/jpg, image/webp" id="file1" />
           <label for="file2">Upload Image</label>
-          <input type="file" class="image-input" accept="image/*" id="file2" />
+          <input type="file" class="image-input" accept="image/jpeg, image/png, image/jpg, image/webp" id="file2" />
           <label for="file3">Upload Image</label>
-          <input type="file" class="image-input" accept="image/*" id="file3" />
+          <input type="file" class="image-input" accept="image/jpeg, image/png, image/jpg, image/webp" id="file3" />
         </div>
       </div>
       <div class="product-information">
